After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658721 - cally: Fix up event listener registration minimally
cally: Fix up event listener registration minimally
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2011-09-11 01:05 UTC by Matthias Clasen
Modified: 2011-09-11 14:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cally: Fix up event listener registration minimally (1.26 KB, patch)
2011-09-11 01:05 UTC, Matthias Clasen
accepted-commit_now Details | Review
cally: Fix up event listener registration minimally (1.26 KB, patch)
2011-09-11 14:58 UTC, Matthias Clasen
committed Details | Review

Description Matthias Clasen 2011-09-11 01:05:43 UTC
For god-knows-what reason, at-spi is trying various formats
of strings when registering listeners, triggering an ugly

(gnome-shell:4411): Clutter-WARNING **: invalid object type create

warning in .xsession-errors. Stop doing that.

Also don't leak temporary string arrays that are a side-effect
of passing parameters around as formatted strings.
Comment 1 Matthias Clasen 2011-09-11 01:05:46 UTC
Created attachment 196193 [details] [review]
cally: Fix up event listener registration minimally
Comment 2 Emmanuele Bassi (:ebassi) 2011-09-11 13:44:08 UTC
Review of attachment 196193 [details] [review]:

looks good to me.
Comment 3 Matthias Clasen 2011-09-11 14:58:52 UTC
The following fix has been pushed:
5781beb cally: Fix up event listener registration minimally
Comment 4 Matthias Clasen 2011-09-11 14:58:54 UTC
Created attachment 196214 [details] [review]
cally: Fix up event listener registration minimally

For god-knows-what reason, at-spi is trying various formats
of strings when registering listeners, triggering an ugly

(gnome-shell:4411): Clutter-WARNING **: invalid object type create

warning in .xsession-errors. Stop doing that.

Also don't leak temporary string arrays that are a side-effect
of passing parameters around as formatted strings.